crates/core/src/commands/inspect/tests/snapshots/caesura__commands__inspect__tests__inspect_tests__format_tags_table_with_long_value.snap
---
source: crates/core/src/commands/inspect/tests/inspect_tests.rs
expression: output
---



Copyright Message   (c) 2011 Long artist name via Long record       COPYRIGHT
                    label name (c) 1981 Long artist name via Long
                    record label name
