crates/core/src/commands/inspect/tests/snapshots/caesura__commands__inspect__tests__inspect_tests__format_tags_table_with_multiline_value.snap
---
source: crates/core/src/commands/inspect/tests/inspect_tests.rs
expression: output
---



Lyrics   Lyric line 1                          LYRICS
         Lyric line 2
         [+18 more lines, 244 chars clipped]
