crates/core/src/commands/inspect/tests/snapshots/caesura__commands__inspect__tests__inspect_tests__get_details_mixed.snap
---
source: crates/core/src/commands/inspect/tests/inspect_tests.rs
expression: output
---
                                 Bit    Sample                  
                                 Rate   Rate                    Bit
D   T   Type   Time    Size      kbps   kHz      Channels       Depth

1   1   FLAC   01:05   830 KiB    104   44.1     2              16
1   2   MP3    01:05   2.4 MiB    320   44.1     Joint stereo   

---

Rename Artist - Multi Disc Album - 01 First Track.flac

Comment            Processed by SoX                   COMMENT
Track Artist       Rename Artist                      ARTIST
Album Title        Multi Disc Album                   ALBUM
Track Title        First Track                        TITLE
Track Number       1                                  TRACKNUMBER
Disc Number        1                                  DISCNUMBER
Recording Date     2024                               DATE
Encoder Software   reference libFLAC 1.5.0 20250211   ENCODER

Front Cover   0.8 KiB   image/png   METADATA_BLOCK_PICTURE

---

Rename Artist - Multi Disc Album - 02 Second Track.mp3

Track Artist     Rename Artist      TPE1
Album Title      Multi Disc Album   TALB
Track Title      Second Track       TIT2
Recording Date   2024               TDRC
Track Number     2                  TRCK
Disc Number      1                  TPOS

Front Cover   0.8 KiB   image/png   APIC
