crates/core/src/commands/inspect/tests/snapshots/caesura__commands__inspect__tests__inspect_tests__get_details_v0.snap
---
source: crates/core/src/commands/inspect/tests/inspect_tests.rs
expression: output
---
                          Bit    Sample
                          Rate   Rate
D   T   Time    Size      kbps   kHz      Channels

1   1   01:05   767 KiB     96   44.1     Joint stereo
1   2   01:05   746 KiB     93   44.1     Joint stereo
2   1   01:05   766 KiB     96   44.1     Joint stereo
2   2   01:05   737 KiB     92   44.1     Joint stereo

---

Disc 1/Rename Artist - Multi Disc Album - 01 First Track.mp3

Track Artist     Rename Artist      TPE1
Album Title      Multi Disc Album   TALB
Track Title      First Track        TIT2
Recording Date   2024               TDRC
Track Number     1                  TRCK
Disc Number      1                  TPOS

Front Cover   0.8 KiB   image/png   APIC

---

Disc 1/Rename Artist - Multi Disc Album - 02 Second Track.mp3

Track Artist     Rename Artist      TPE1
Album Title      Multi Disc Album   TALB
Track Title      Second Track       TIT2
Recording Date   2024               TDRC
Track Number     2                  TRCK
Disc Number      1                  TPOS

Front Cover   0.8 KiB   image/png   APIC

---

Disc 2/Rename Artist - Multi Disc Album - 01 Third Track.mp3

Track Artist     Rename Artist      TPE1
Album Title      Multi Disc Album   TALB
Track Title      Third Track        TIT2
Recording Date   2024               TDRC
Track Number     1                  TRCK
Disc Number      2                  TPOS

Front Cover   0.8 KiB   image/png   APIC

---

Disc 2/Rename Artist - Multi Disc Album - 02 Fourth Track.mp3

Track Artist     Rename Artist      TPE1
Album Title      Multi Disc Album   TALB
Track Title      Fourth Track       TIT2
Recording Date   2024               TDRC
Track Number     2                  TRCK
Disc Number      2                  TPOS

Front Cover   0.8 KiB   image/png   APIC
