crates/core/src/commands/inspect/tests/snapshots/caesura__commands__inspect__tests__inspect_tests__inspect_factory_flac.snap
---
source: crates/core/src/commands/inspect/tests/inspect_tests.rs
expression: output
---
                          Bit    Sample
                          Rate   Rate                Bit
D   T   Time    Size      kbps   kHz      Channels   Depth

1   1   01:05   830 KiB    104   44.1     2          16
1   2   01:05   1.2 MiB    158   44.1     2          16
2   1   01:05   936 KiB    117   44.1     2          16
2   2   01:05   1.3 MiB    171   44.1     2          16

---

Disc 1/Rename Artist - Multi Disc Album - 01 First Track.flac

Comment            Processed by SoX                   COMMENT
Track Artist       Rename Artist                      ARTIST
Album Title        Multi Disc Album                   ALBUM
Track Title        First Track                        TITLE
Track Number       1                                  TRACKNUMBER
Disc Number        1                                  DISCNUMBER
Recording Date     2024                               DATE
Encoder Software   reference libFLAC 1.5.0 20250211   ENCODER

Front Cover   0.8 KiB   image/png   METADATA_BLOCK_PICTURE

---

Disc 1/Rename Artist - Multi Disc Album - 02 Second Track.flac

Comment            Processed by SoX                   COMMENT
Track Artist       Rename Artist                      ARTIST
Album Title        Multi Disc Album                   ALBUM
Track Title        Second Track                       TITLE
Track Number       2                                  TRACKNUMBER
Disc Number        1                                  DISCNUMBER
Recording Date     2024                               DATE
Encoder Software   reference libFLAC 1.5.0 20250211   ENCODER

Front Cover   0.8 KiB   image/png   METADATA_BLOCK_PICTURE

---

Disc 2/Rename Artist - Multi Disc Album - 01 Third Track.flac

Comment            Processed by SoX                   COMMENT
Track Artist       Rename Artist                      ARTIST
Album Title        Multi Disc Album                   ALBUM
Track Title        Third Track                        TITLE
Track Number       1                                  TRACKNUMBER
Disc Number        2                                  DISCNUMBER
Recording Date     2024                               DATE
Encoder Software   reference libFLAC 1.5.0 20250211   ENCODER

Front Cover   0.8 KiB   image/png   METADATA_BLOCK_PICTURE

---

Disc 2/Rename Artist - Multi Disc Album - 02 Fourth Track.flac

Comment            Processed by SoX                   COMMENT
Track Artist       Rename Artist                      ARTIST
Album Title        Multi Disc Album                   ALBUM
Track Title        Fourth Track                       TITLE
Track Number       2                                  TRACKNUMBER
Disc Number        2                                  DISCNUMBER
Recording Date     2024                               DATE
Encoder Software   reference libFLAC 1.5.0 20250211   ENCODER

Front Cover   0.8 KiB   image/png   METADATA_BLOCK_PICTURE
