crates/core/src/commands/inspect/tests/snapshots/caesura__commands__inspect__tests__inspect_tests__inspect_factory_properties_table_mixed_formats.snap
---
source: crates/core/src/commands/inspect/tests/inspect_tests.rs
expression: output
---
                                  Bit    Sample
                                  Rate   Rate                    Bit
D   T   Type   Time    Size       kbps   kHz      Channels       Depth

1   1   FLAC   05:12   29.0 MiB    780   44.1     2              16
1   2   FLAC   04:05   45.5 MiB   1558   96       2              24
1   3   FLAC   03:18   19.0 MiB    805   48       2              24
1   4   MP3    05:12   11.7 MiB    320   44.1     Joint stereo
1   5   MP3    05:12    9.0 MiB    245   48       Joint stereo
